fix whitespace

--- a/style.css
+++ b/style.css
@@ -425,7 +425,6 @@ body {
         content: '';
         display: block;
         background: url(/assets/desktop/image-hero-left.png) top left/contain no-repeat;
-        align-self: center;
     }
 
     .hero__cta {
@@ -439,9 +438,7 @@ body {
     .hero::after {
         content: '';
         display: block;
-        background: url(/assets/desktop/image-hero-right.png) center center/contain no-repeat;
-        /* position: relative; */
-        /* top: 1.5rem; */
+        background: url(/assets/desktop/image-hero-right.png) center right/contain no-repeat;
     }
 
     .text__display-header {
